optimization & misc
load files in a separate thread at startup
excluded sync notifications
added missing files for tracking
new frame loading image